feat: scen 1, 2 endpoints
